# tabnet

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  VITE_MIGRATION.md  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml  code-checks.yml  codecov.yml  copilot-setup-steps.yml  docs.yml  import-checks.yml  main.yml  pr-tests.yml  publish.yml
docs/source/: classifier.rst  conf.py  credits.rst  guides.rst  index.rst  introduction.rst  metrics.rst  models.rst  multi_classifier.rst  multi_regressor.rst  pretrainer.rst  regressor.rst
examples/: README.md  gmail_batch_example.py
nbs/: census_example.ipynb  customizing_example.ipynb  forest_example.ipynb  import_check.py  multi_regression_example.ipynb  multi_task_example.ipynb  pretraining_example.ipynb  regression_example.ipynb
pytorch_tabnet/: __init__.py  abstract_model.py  abstract_model_sub.py  augmentations.py  callbacks.py  data_handlers.py  import_test.py  metrics.py  multiclass_utils.py  multitask.py  pretraining.py  pretraining_utils.py  sparsemax.py  tab_model.py  tab_network.py  utils.py
pytorch_tabnet/data_handlers/: __init__.py  data_handler_funcs.py  predict_dataset.py  tb_dataloader.py  torch_dataset.py
pytorch_tabnet/error_handlers/: __init__.py  data.py  embedding_errors.py  validation.py
pytorch_tabnet/metrics/: __init__.py  accuracy.py  auc.py  balanced_accuracy.py  base_metrics.py  logloss.py  mae.py  mse.py  rmse.py  rmsle.py  unsupervised_loss.py  unsupervised_metrics.py
pytorch_tabnet/multiclass_utils/: __init__.py  _assert_all_finite.py  _is_integral_float.py  dimension.py  is_multilabel.py  label_processing.py  type_detection.py  type_of_target.py  validation.py
pytorch_tabnet/tab_models/: __init__.py  abstract_model.py  abstract_model_sub.py  multitask.py  pretraining.py  tab_class.py  tab_model.py  tab_reg.py
pytorch_tabnet/tab_network/: tabnet_encoder.py
pytorch_tabnet/utils/: __init__.py  device.py  dimension.py  explain.py  explain_v2.py  gmail_api.py  is_multilabel.py  label_processing.py  matrices.py  multiclass_validation.py  type_of_target.py  validation.py  (+1 more)
tests/: conftest.py  import_test.py  sparsemax_tests.py  tabnet_tests.py  test_abstract_model.py  test_callback_container_callbacks.py  test_count_collected_devices.py  test_data_augmentation.py  test_data_handlers.py  test_data_loading_utils.py  test_error_handling_extended.py  test_explain_v1.py  test_metrics.py  test_metrics_check.py  test_multiclass_utils.py  test_pretraining_utils.py  test_sparsemax.py  test_tab_network.py  test_unsupervised_loss.py  test_utils.py
web/: README.md  index.html  package-lock.json  package.json
(+114 files in other folders)
