
[project]
name = "pytorch_tabnet"
version = "4.1.0"
description = "PyTorch implementation of TabNet"
readme = "README.md"
authors = []
requires-python = ">=3.10"

keywords = ["tabnet", "pytorch", "neural-networks" ]
exclude = ["tabnet/*.ipynb"]


dependencies = [
    "numpy",
    "torch",
    "tqdm",
    "scikit_learn",
    "scipy",
]


[dependency-groups]
dev = [
    "jupyter",
    "xgboost",
    "matplotlib",
    "wget",
    "pandas",
    "sphinx",
    "sphinx-rtd-theme",
    "recommonmark",
    "db-dtypes",
    "pytest",
    "hypothesis",
    "pre-commit",
    "pytest-cov",
    "mypy",
    "pytest-parametrization",
    "types-pytz",
    "pandas-stubs",
    "ruff",
]


[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.pytest.ini_options]
addopts = "--ignore=tests/intg --ignore=intg"

[tool.hatch.build.targets.sdist]
only-include = ["pytorch_tabnet", ]
source = "."

[tool.hatch.build.targets.wheel]
only-include = ["pytorch_tabnet", ]
source = "."